# Myls

./: CMakeLists.txt  main.cpp  print.cpp  print.h  sort.cpp  sort.h
headers/: config.h  wildcards.h
sources/: print.cpp  sort.cpp  wildcards.cpp
